# common_functions

./: README.md  pyproject.toml
common_functions/: common.py  database_operations.py  dataframe_operations.py  file_operations.py  gender_guessing.py  physical_address.py  search.py  transformations.py  voter_functions.py
tests/: test_common.py  test_dataframe_operations.py  test_gender_guessing.py  test_physical_address.py  test_voter_functions.py
